tests/files/flow_controller_tests/should_run/114.cmdr
x = 15.5;
print arccoth(x);