tests/files/flow_controller_tests/should_fail/111.cmdr
x = false;
print arccoth(x);